# doughnut

./: .cursorignore  .cursorindexingignore  .dummy_test_commit.txt  .editorconfig  .eslintrc.cjs  .eslintrc.js  .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .prettierignore  .project  .syncpackrc.json  AGENTS.md  CLAUDE.md  CLOUD_AGENT_BACKEND_TESTING_SUMMARY.md  LICENSE  Pipfile  README.md  assert_generated_type_script_up_to_date.sh  biome.json  cypress.config.ts  cypress.d.ts  cypress.json  env.sh  env.sh.secret  flake.nix  git_push.sh  gradle.properties  open_api_docs.yaml  openapi-ts.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  process-compose.yaml  promopt.txt  pyproject.toml  redocly.yaml  rogerio.txt  (+8 more)
.cursor/: agent-map.md  hooks.json  worktrees.json
.github/: dependabot.yml
.idx/: dev.nix
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
backend/: HELP.md  build.gradle  create-gcloud-compute.sh  gradle.properties  instance-startup.sh  settings.gradle
ci_monitor/: babel.config.js  package.json  sound-monitor.js
cli/: .env.local.example  .gitignore  package.json  pythonAsTextVitePlugin.ts  stryker.conf.mjs  tsconfig.json  vitest.config.ts  vitest.stryker.config.ts
cypress/: tsconfig.json
doc/: definition_of_done.md  initial_working_agreement.md
docs/: cloud_agent_backend_testing.md  cloud_agent_setup.md  current_architecture_workshops.md  cursor.md  database-erd.md  definition_of_done.md  dev_vm.md  flaky_test_log.txt  git_https_to_git+ssh.md  gitpod.md  (+17 more)
(+6514 files in other folders)
