[tool.poetry]
name = "doughnut"
version = "0.1.0"
description = ""
authors = ["Tan Yeong Sheng <tanyeongsheng@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.1.1"
openai = "^1.35.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
